About fragment scroll and load button added